# contract-annex-processing

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Launch Pipeline.command  PLAN.md  README.md  launch.py  pipeline.toml  pipeline.toml.template  pyproject.toml  setup_env.py
scripts/: create_template.py
src/doc_pipeline/: __init__.py  cli.py  config.py  gui.py  models.py  state.py
src/doc_pipeline/phases/: extraction.py  generation.py  setup.py  spreadsheet.py
src/doc_pipeline/utils/: croatian.py  fileops.py  parsers.py  progress.py
templates/: annex-template-1.md  annex-template-2.md  annex-template.md
templates/default/: aneks_template.docx
